# omgrab-sdk

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/api/cameras/: index.html
0.1.0/api/devices/: index.html
0.1.0/api/display/: index.html
0.1.0/api/gpio/: index.html
0.1.0/api/recording/: index.html
0.1.0/api/runtime/: index.html
0.1.0/api/sensors/: index.html
0.1.0/api/testing/: index.html
0.1.0/api/utils/: index.html
0.1.0/api/workflows/: index.html
0.1.0/runtime-app/: index.html
0.1.0/search/: search_index.json
0.1.1/: 404.html  index.html  sitemap.xml
0.1.1/api/cameras/: index.html
0.1.1/api/devices/: index.html
0.1.1/api/display/: index.html
0.1.1/api/gpio/: index.html
0.1.1/api/recording/: index.html
0.1.1/api/runtime/: index.html
0.1.1/api/sensors/: index.html
0.1.1/api/testing/: index.html
0.1.1/api/utils/: index.html
0.1.1/api/workflows/: index.html
0.1.1/runtime-app/: index.html
0.1.2/: 404.html  index.html  objects.inv  sitemap.xml
0.1.2/api/cameras/: index.html
0.1.2/api/devices/: index.html
0.1.2/api/display/: index.html
0.1.2/api/gpio/: index.html
0.1.2/api/recording/: index.html
0.1.2/api/runtime/: index.html
0.1.2/api/sensors/: index.html
0.1.2/api/testing/: index.html
0.1.2/api/utils/: index.html
0.1.2/api/workflows/: index.html
0.1.2/runtime-app/: index.html
0.1.2/search/: search_index.json
app/: __main__.py  docker_wifi.py  stream_configs.py
docs/: index.md  runtime-app.md
docs/api/: cameras.md  devices.md  display.md  gpio.md  recording.md  runtime.md  sensors.md  testing.md  utils.md  workflows.md
scripts/: dashboard.py  gpio_hardware_test.sh  mkv_viewer.py
service/: 99-wifi-stable.sh  early-led.service  early-led.sh  omgrab.service  smb-omgrab.conf  wifi-powersave-off.service  wifi-stable.conf
setup/: install.sh  uninstall.sh
src/: conftest.py
src/omgrab/: __init__.py  conftest.py  testing.py
src/omgrab/cameras/: __init__.py  cameras.py  oakd_camera.py  queue_reader_camera.py  usb_camera.py  usb_port.py
src/omgrab/cameras/tests/: __init__.py  test_cameras.py  test_oakd_camera.py  test_queue_reader_camera.py
src/omgrab/devices/: __init__.py  capture_device.py  oakd_capture_device.py  oakd_device_type.py  usb_capture_device.py
src/omgrab/devices/tests/: __init__.py  test_capture_device.py  test_oakd_capture_device.py  test_oakd_device_type.py  test_usb_capture_device.py
src/omgrab/display/: __init__.py  screen_manager.py  screen_writer.py  test_alignment.py  test_display.py
src/omgrab/display/tests/: test_screen_manager.py
src/omgrab/gpio/: __init__.py  gpio.py  gpio_process.py
src/omgrab/gpio/tests/: __init__.py  conftest.py  test_gpio_controller.py  (+2 more)
src/omgrab/recording/: __init__.py  chunked_writer.py  manifest.py  py_av_writer.py  stream_configs.py
src/omgrab/runtime/: __init__.py  battery_monitor.py  device_status.py  gpio_manager.py  linux_system_metrics.py  network_monitor.py  recording_manager.py  recording_session.py  wifi_connect.py
src/omgrab/sensors/: __init__.py  queue_reader_sensor.py  sensor.py
src/omgrab/utils/: __init__.py  merge.py
src/omgrab/workflows/: __init__.py  state_machine.py
wifi-connect/: Dockerfile.template  NOTICE  docker-compose.yml
wifi-connect/scripts/: build-and-push.sh  start.sh
(+20 files in other folders)
